Cleaned up core.